# story-portal-app-v2

./: .gitignore  CONTROL-CENTER-OPERATIONAL.md  Makefile  PHASE-1-COMPLETE.md  PHASE-1-COMPLETION-REPORT.md  PHASE-1-FINAL-VERIFICATION.md  PHASE-2-PROGRESS-REPORT.md  SECURITY.md  docker-compose.v2.yml  docker-compose.yml  echo  generate-audit-framework.py  l05-planning-service-v2-bootstrap-spec.md  pytest.ini  run-full-audit.sh  story-portal-audit-workflow-design.md
audit/: AUDIT-COMPARISON.md  AUDIT-COMPLETION-SUMMARY.md
audit-package/: MASTER-AUDIT-PROMPT.md  QUICK-START.md  README.md
backups/: backup-20260118-133121.manifest  redis-20260118-133121.rdb
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MONITORING.md  PRODUCTION-DEPLOYMENT-CHECKLIST.md  ROLLBACK-PROCEDURES.md  WEEK-9-DAY-3-COMPLETION-REPORT.md  WEEK-9-DAY-4-BACKUP-RECOVERY-VALIDATION.md  WEEK-9-DAY-4-COMPLETION-REPORT.md  WEEK-9-DAY-4-MONITORING-VALIDATION.md  WEEK-9-DAY-4-PERFORMANCE-ANALYSIS.md  WEEK-9-DAY-4-PLAN.md  WEEK-9-DAY-4-STRESS-TEST-ANALYSIS.md  WEEK-9-PREPARATION-PLAN.md
my-project/: .env.example  .env.telemetry  .mcp.json  .prettierignore  CLAUDE.md  DIAGNOSTIC-SCRIPT.js  L05-PLANNING-PIPELINE-IMPLEMENTATION-PLAN.md  PHASE4-INTEGRATION-COMPLETE.md  PHASE4-TEST-RESULTS.md  STEAM-MODAL-IMPLEMENTATION.md  STEAM-MODAL-VERIFICATION.md  TASK4-BUG-REPORT.md  TELEMETRY.md  TROUBLESHOOTING-STEAM-MODAL.md  enable-telemetry.sh  implement-l04-model-gateway-prompt.md  index.html  l01-l06-end-to-end-testing.md  learning-layer-implementation-prompt.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.integration.ts
my-project/elasticsearch-memory-mcp/: .gitignore  .mcp.json  LICENSE  MANIFEST.in  README.md  mcp_server.py  mcp_server_v6.2.py  pyproject.toml  requirements.txt  setup.py
my-project/elasticsearch-memory-mcp/memory/: __init__.py  checkpoint.py  emotional.py  session.py  temporal.py  workspace.py
platform/: .dockerignore  .env.example  .mcp.json  API-FIX-SUMMARY.md  API-GATEWAY-FIX-SUMMARY.md  API-LOAD-TEST-BLOCKERS.md  CLAUDE.md  DASHBOARD_QUICK_START.md  DATABASE-RBAC.md  DEPLOYMENT_SUMMARY.md  FEATURE_GAP_NL_INTERFACE.md  HIGH-AVAILABILITY.md  L09_GATEWAY_FIX_REPORT.md  L11_BRIDGE_INTEGRATION.md  L12_MCP_SETUP_COMPLETE.md  L12_SPRINT_SUMMARY.md  NEW_TOOLS_QUICK_REFERENCE.md  P1-01-L11-HEALTH-FIX.md  P1-02-REDIS-STATUS.md  P1-03-SSL-DEPLOYMENT.md  P1-04-SECRETS-MANAGEMENT.md  P1-05-BACKUP-VERIFICATION.md  P1-06-WAL-ARCHIVING.md  P1-07-RBAC-IMPLEMENTATION.md  P1-08-TEST-COMPLETION.md  P1-08-TEST-SUITE.md  P2-02-CICD-PIPELINE.md  (+51 more)
platform-cli/: portal
(+1889 files in other folders)
